--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -354,6 +354,10 @@
     "transfer": "发送token",
     "burn": "销毁token"
   },
+  "cancel-timer": {
+    "title": "取消定时上架",
+    "inner": "您是否确定取消定时上架吗?"
+  },
   "products": {
     "sort-label": "按 {value}筛选"
   },
