--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -194,7 +194,7 @@
   "drop-details": {
     "live": "Live",
     "sold": "Sold",
-    "timer-descr": "until the Drop ends",
+    "timer-descr": "before the drop starts",
     "sold-for": "Sold for",
     "top-bid": "Top Bid",
     "fixed-price": "Fixed Price"
@@ -438,6 +438,7 @@
     "minutes-short": "{minutes}m",
     "seconds-short": "{seconds}s",
     "time-left-short": "{days} {hours} {minutes} {seconds} left",
+    "time-end": "Ended on {days}/{months}/{years}",
     "time-over": "Time expired"
   },
   "transfer-token": {
