--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -400,6 +400,7 @@
     "minutes-short": "{minutes} минут",
     "seconds-short": "{seconds} секуд",
     "time-left-short": "Осталось {days} {hours} {minutes} {seconds}",
+    "time-end": "Ended on {days}/{months}/{years}",
     "time-over": "Время истекло"
   },
   "transfer-token": {
