complete FAN-447 add Multi-chain

--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -213,6 +213,7 @@
       "eth": "Ethereum Mainnet",
       "heco": "HECO Chain",
       "heco-2": "Huobi Wallet",
+      "polygon":"Polygon Mainnet",
       "title": "Select network"
     },
     "network": {
