--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -243,6 +243,7 @@
       "eth": "Ethereum Mainnet",
       "heco": "HECO Chain",
       "heco-2": "Huobi Wallet",
+      "polygon":"Polygon Mainnet",
       "title": "Select network"
     },
     "network": {
