Preparing the structure

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -122,7 +122,8 @@
       "name": "Name",
       "specific-time-sale": "Put on sale at a specific time",
       "standard": "Standard",
-      "supply": "Supply"
+      "supply": "Supply",
+      "collection": "Collection"
     },
     "next": "Next",
     "standardOption": [
