--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -243,7 +243,7 @@
       "eth": "Ethereum Mainnet",
       "heco": "HECO Chain",
       "heco-2": "Huobi Wallet",
-      "polygon":"Polygon Mainnet",
+      "polygon": "Polygon Mainnet",
       "title": "Select network"
     },
     "network": {
@@ -302,6 +302,7 @@
     "put-on-cancel": "Cancel",
     "sold-for": "Sold for",
     "top-bid": "Top Bid",
+    "pool-start-tips": "The pool will start in:",
     "transfer": "Transfer token"
   },
   "cancel-timer": {
