--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -242,7 +242,7 @@
       "eth": "以太坊主网",
       "heco": "火币生态链",
       "heco-2": "火币钱包",
-      "polygon":"Polygon 主网",
+      "polygon": "Polygon 主网",
       "title": "选择网络"
     },
     "network": {
@@ -301,6 +301,7 @@
     "sold-for": "已按XX售出",
     "put-on-cancel": "取消",
     "transfer": "发送token",
+    "pool-start-tips": "秒杀倒计时：",
     "burn": "销毁token"
   },
   "cancel-timer": {
