complete modify create

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -106,7 +106,10 @@
     ],
     "submit": "Create",
     "submitting": "Creating",
-    "title": "Create NFT collection"
+    "title": "Create NFT collection",
+    "collections": "Collections",
+    "subCollection": "When creating your first NFT, you need to create a collection. For next creation, you can put the NFT in an already created collection."
+
   },
   "create-nft": {
     "channelOption": {
