--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -295,7 +295,7 @@
   },
   "monthFormat": "{month, select, 1{January} 2{February} 3{March} 4{April} 5{May} 6{June} 7{July} 8{August} 9{September} 10{October} 11{November} 12{December}}",
   "movers": {
-    "title": "Fast movers"
+    "title": "Featured"
   },
   "overview": {
     "collections": {
@@ -386,7 +386,7 @@
       "following": "Following",
       "items": "Items",
       "liked": "Liked",
-      "my-bids": "My bids",
+      "my-bids": "My Transaction",
       "my-collections": "My collections",
       "my-items": "My items",
       "my-sells": "My sales"
