fix: Updated Russian

--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -4,6 +4,7 @@
   },
   "burn-token": {
     "submit": "Сжечь",
+    "no-items": "Пока нет созданных предметов",
     "title": "Сжечь токены"
   },
   "buy-dialog": {
@@ -32,12 +33,12 @@
         "collection-name": "название коллекции",
         "collection-symbol": "символ коллекции",
         "collection-url": "ссылка на коллекцию",
-        "description": "Описание"
+        "description": "Описание (Какая история стоит за этим NFT?)"
       },
       "tip-warning": {
-        "collection-symbol": "Add an explanation to Collection Symbol",
-        "ERC721": "The ERC-721 token standard represents a single unique asset. It is immutable, transparent in ownership and security, and the most widely used. Each ERC-721 token holds its own unique contract values.",
-        "ERC1155": "The ERC-1155 is a dual purpose fungible and non fungible token. It’s faster and more efficient to use in batch token transfers and can be deployed in a single smart contract for an infinite number of token types. "
+        "collection-symbol": "Символ коллекции - это сокращенная версия названия вашего бренда. Считайте, что это логотип вашей коллекции в виде аббревиатуры (например, BTC - биткоин). ",
+        "ERC721": "Стандарт токенов ERC-721 представляет собой единый уникальный актив. Он неизменяем, прозрачен с точки зрения владения и безопасности и является наиболее широко используемым. Каждый токен ERC-721 хранит свои уникальные контрактные ценности.",
+        "ERC1155": "ERC-1155 - это токен двойного назначения: сменные и несменные. Он быстрее и эффективнее используется при пакетной передаче токенов и может быть развернут в одном смарт-контракте для бесконечного числа типов токенов. "
       }
     }
   },
@@ -52,6 +53,7 @@
     "copied": "Скопировано!",
     "copy-to-clipboard": "Скопировано в буфер обмена",
     "load-more": "Показать больше",
+    "nothing-found": "Ничего не найдено",
     "quantity": "Количество",
     "read-more": "Больше информации",
     "reset": "Сброс настроек",
@@ -59,7 +61,9 @@
     "save": "Сохранить",
     "submitting": "Отправить",
     "unknown": "Неизвестно",
-    "view-all": "Посмотреть всё"
+    "view-all": "Посмотреть всё",
+    "no": "Нет",
+    "yes": "да"
   },
   "connect-wallet": {
     "custom-binancewallet": {
@@ -108,28 +112,34 @@
     "submit": "Создать",
     "submitting": "В процессе создания",
     "title": "Создать коллекцию NFT",
-    "collections": "Collections",
-    "subCollection": "When creating your first NFT, you need to create a collection. For next creation, you can put the NFT in an already created collection."
+    "collections": "Коллекции",
+    "subCollection": "При создании первого НМТ необходимо создать коллекцию. При следующем создании вы можете поместить НМТ в уже созданную коллекцию."
   },
   "create-nft": {
     "channelOption": {
+      "Comicbooks": "Комикс",
       "Comics": "Комикс",
       "FineArts": "Изобразительное искусство",
       "Sports": "Спорт"
     },
     "label": {
+      "Set-up-date": "Установить дату и время",
       "channel": "Канал",
       "description": "Описание",
       "name": "Название",
+      "specific-time-sale": "Начать продажу в заданное время",
       "standard": "Стандарт",
-      "supply": "Выпущено"
+      "supply": "Выпущено",
+      "collection": "Коллекция"
     },
+    "next": "Next",
     "standardOption": [
       "ERC-721",
       "ERC-1155"
     ],
     "submit": "Создать",
     "submitting": "В процессе создания",
+    "time": "",
     "title": "Создать NFT"
   },
   "cropper": {
@@ -164,13 +174,13 @@
     "owner": {
       "balance": "{balance} копий"
     },
-    "place-a-bid": "Сделать ставку",
+    "place-a-bid": "Ставка на место",
     "sold-out": "Распродано",
     "tabs": {
       "bids": "Ставки",
       "history": "История",
       "owners": "Владельцы",
-      "token-info": "Информация о токенах"
+      "token-info": "NFT Подробнее"
     },
     "token-info": {
       "contract": "Контракт",
@@ -179,8 +189,28 @@
       "token-id": "Токен ID",
       "total-supply": "Всего выпущено"
     },
+    "tooltip": {
+      "bid-warning": "Пожалуйста, обратите внимание, что вы не сможете отменить ставку после ее размещения. Ваша ставка будет действительна до тех пор, пока она не будет перебита, принята создателем или не истечет срок ее действия."
+    },
+    "role": {
+      "seller": "Владелец",
+      "minter": "Создатель"
+    },
     "top-bid": "Наивысшая ставка",
     "your-bid": "Ваша ставка"
+  },
+  "drop-details": {
+    "live": "В продаже",
+    "sold": "Продано",
+    "timer-descr": "Время до начала продаж",
+    "sold-for": "Продано за",
+    "top-bid": "Высшая ставка",
+    "fixed-price": "Фиксированная цена"
+  },
+  "drops": {
+    "previous": "Прошлые распродажи",
+    "top-creators": "Топовые художники",
+    "upcoming": "Предстоящие распродажи"
   },
   "empty-data": {
     "text": "Переключиться на правильную сеть, чтобы просмотреть содержимое этой страницы.",
@@ -203,8 +233,9 @@
     "connect": "Подключить кошелёк",
     "create": "Создать",
     "disconnect": "Отключиться",
+    "drops": "Dr🔥ps",
     "how-it-works": "Как это работает",
-    "inventory": "Мой инвентарь",
+    "inventory": "Мой п профиль",
     "market": "Рынок",
     "my-collections": "Мои коллекции",
     "profile-settings": "Настройки профиля",
@@ -261,6 +292,7 @@
     "zh-CN": "中文",
     "ru-RU": "Русский"
   },
+  "monthFormat": "{month, select, 1{January} 2{February} 3{March} 4{April} 5{May} 6{June} 7{July} 8{August} 9{September} 10{October} 11{November} 12{December}}",
   "movers": {
     "title": "Набирающие полулярность"
   },
@@ -275,9 +307,15 @@
     "owner": "Владелец",
     "price": "Цена",
     "put-on-sale": "Выставить на продажу",
+    "put-on-cancel": "Отмена",
     "sold-for": "Продано за",
     "top-bid": "Наивысшая ставка",
+    "pool-start-tips": "Бассейн будет запущен:",
     "transfer": "Перевести токен"
+  },
+  "cancel-timer": {
+    "title": "Отмена продажи",
+    "inner": "Вы уверены, что хотите отменить эту продажу?"
   },
   "products": {
     "sort-label": "Сортировать по: {value}"
@@ -299,9 +337,11 @@
       "transfer": "Перевести"
     },
     "bids-categories": {
+      "Comicbooks": "Комикс",
       "Comics": "Комикс",
       "all": "Всё",
       "art": "Исскуство",
+      "sport": "Спорт",
       "sports": "Спорт"
     },
     "bio": "О себе",
@@ -318,6 +358,7 @@
         "username": "Имя пользователя",
         "website": "Веб-сайт"
       },
+      "no-profile": "Пожалуйста заполните настройки вашего профиля.",
       "placeholder": {
         "facebook": "Ссылка на главную страницу Facebook",
         "instagram": "Ссылка на главную страницу Instagram",
@@ -344,7 +385,7 @@
       "following": "Подписаны",
       "items": "Товары",
       "liked": "Нравится",
-      "my-bids": "Мои ставки",
+      "my-bids": "Моя сделка",
       "my-collections": "Мои коллекции",
       "my-items": "Мои товары",
       "my-sells": "Мои продажи"
@@ -362,7 +403,9 @@
       "fixed-swap": "Фиксированная цена"
     },
     "error": {
-      "wrong-direct-reserve-bid-amount": "Убедитесь, что: Минимальная ставка ≤ Резервная цена < Цена прямой покупки."
+      "wrong-direct-bid-amount": "Убедитесь что минимальная ставка меньше прямой цены покупки",
+      "wrong-direct-reserve-bid-amount": "Убедитесь, что: Минимальная ставка ≤ Резервная цена < Цена прямой покупки.",
+      "wrong-reserve-bid-amount": "Убедитесь что минимальная ставка меньше или равна резервной цене"
     },
     "expire": "Время истечёт через {value, date, medium} {value, time, short}",
     "fee": "Комиссия Fangible {value}%",
@@ -384,33 +427,30 @@
       "directPurchase": "После установки цены прямой покупки покупатели могут пропустить процесс торгов и напрямую купить по этой цене. Цена прямой покупки должна быть больше, чем минимальная ставка и минимальная цена покупки.",
       "duration": "Аукцион завершится в это время",
       "reservePrice": "Резервная цена будет скрыта. Если вы не получите ставок, равных или превышающих ваш резерв, ваш аукцион не будет продан."
-    },
-    "role": {
-      "seller": "卖家",
-      "minter": "铸造者"
-    },
-    "top-bid": "最高出价",
-    "your-bid": "您的出价"
+    }
   },
   "social": {
     "facebook": "Facebook",
     "instagram": "Instagram",
     "share": "Поделиться",
     "telegram": "Telegram",
-    "website": "Website",
+    "website": "Сайт",
     "title-for-socials": "{title} — {description}",
+    "put-on-sale": "Выставить на продажу",
+    "put-on-cancel": "Отмена",
     "twitter": "Twitter"
   },
   "time": {
     "days-left": "Осталось {days} дней",
     "days-short": "{days} дней",
+    "finished-on": "Закончил на {end, date, medium}",
     "hours-short": "{hours} часов",
     "minutes-short": "{minutes} минут",
     "seconds-short": "{seconds} секуд",
     "time-left-short": "Осталось {days} {hours} {minutes} {seconds}",
-    "time-end": "Ended on {days}/{months}/{years}",
+    "time-end": "Закончился на {days}/{months}/{years}",
     "time-expired": "Время истекло",
-    "time-over": "Time is over"
+    "time-over": "Время истекло"
   },
   "transfer-token": {
     "submit": "Перевести",
